--- a/register.html
+++ b/register.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Styles Conference</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
   </head>
 
   <body>
-
     <!-- Header -->
 
-    <header>
-
+    <header class="container">
       <h1>
         <a href="index.html">Styles Conference</a>
       </h1>
@@ -26,17 +23,15 @@
         <a href="venue.html">Venue</a>
         <a href="register.html">Register</a>
       </nav>
-
     </header>
 
     <!-- Main content -->
-
-    <h1>Register</h1>
-
+    <section class="container">
+      <h1>Register</h1>
+    </section>
     <!-- Footer -->
 
-    <footer>
-
+    <footer class="container">
       <small>&copy; Styles Conference</small>
 
       <nav>
@@ -46,8 +41,6 @@
         <a href="venue.html">Venue</a>
         <a href="register.html">Register</a>
       </nav>
-
     </footer>
-
   </body>
 </html>
