--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           --><li><a href="schedule.html">Schedule</a></li><!--
           --><li><a href="venue.html">Venue</a></li><!--
           --><li><a href="register.html">Register</a></li>
-       </ul>
+        </ul>
       </nav>
 
     </header>
@@ -63,8 +63,9 @@
         Schedule
 
         --><section class="teaser col-1-3">
+          <h5>Schedule</h5>
           <a href="schedule.html">
-            <h5>Schedule</h5>
+            <img src="assets/images/home/schedule.jpg" alt="Conference Attendees">
             <h3>Three Inspiring Days</h3>
           </a>
           <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
@@ -73,8 +74,9 @@
         Venue
 
         --><section class="teaser col-1-3">
+          <h5>Venue</h5>
           <a href="venue.html">
-            <h5>Venue</h5>
+            <img src="assets/images/home/venue.jpg" alt="The Chicago Theatre">
             <h3>The Chicago Theatre</h3>
           </a>
           <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
